# pipeless

./: Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
.devcontainer/: devcontainer.json
yolo/: process.py
