[tool.poetry]
name = "pipeless"
version = "0.1.0"
description = ""
authors = ["thaddeuscleo <thaddeuscleo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.48"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
